Small refactor of ServerNetworkHandler.